kubernetes/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-ciickd-pc
spec:
  selector:
    matchLabels:
      app: fe-ciickd-pc
  replicas: 1
  template:
    metadata:
      labels:
        app: fe-ciickd-pc
      annotations:
        sidecar.istio.io/inject: 'false'
    spec:
      containers:
        - name: fe-ciickd-pc
          image: cr.mesoor.com/develop/fe-mesoor:d9fdd65a85a535344cb11afff4fd145a17d35f17
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: '0.1'
              memory: '500Mi'
