kubernetes/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fe-huazhi-pc
  labels:
    app: fe-huazhi-pc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: fe-huazhi-pc
